# Agentic-AI-Python

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHECKPOINTS.md  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml  run_checkpoint.py
.github/workflows/: ci.yml
base-app/app/: __init__.py  logging_config.py  main.py  settings.py
checkpoints/checkpoint-1-tool-calling/: README.md
checkpoints/checkpoint-1-tool-calling/app/: __init__.py  deps.py  exceptions.py  lifespan.py  logging_config.py  main.py  retries.py  settings.py
checkpoints/checkpoint-1-tool-calling/app/models/: __init__.py  tool.py
checkpoints/checkpoint-1-tool-calling/app/prompts/: __init__.py  agent.py
checkpoints/checkpoint-1-tool-calling/app/routes/: __init__.py  health.py  tools.py
checkpoints/checkpoint-1-tool-calling/app/services/: __init__.py  llm.py
checkpoints/checkpoint-1-tool-calling/app/tools/: __init__.py  base.py  calculator.py  clock.py  registry.py
checkpoints/checkpoint-2-agent-loop/: README.md
checkpoints/checkpoint-2-agent-loop/app/: __init__.py  deps.py  exceptions.py  lifespan.py  logging_config.py  main.py  retries.py  settings.py
checkpoints/checkpoint-2-agent-loop/app/agents/: __init__.py  raw_loop.py
checkpoints/checkpoint-2-agent-loop/app/models/: __init__.py  agent.py  tool.py
checkpoints/checkpoint-2-agent-loop/app/prompts/: __init__.py  agent.py
checkpoints/checkpoint-2-agent-loop/app/routes/: __init__.py  agent.py  health.py  tools.py
checkpoints/checkpoint-2-agent-loop/app/services/: __init__.py  llm.py
checkpoints/checkpoint-3-safety-rag/: README.md
checkpoints/checkpoint-3-safety-rag/app/: __init__.py  deps.py  exceptions.py  lifespan.py  logging_config.py  main.py  retries.py  settings.py
checkpoints/checkpoint-4-orchestration/: README.md
checkpoints/checkpoint-4-orchestration/app/: __init__.py  deps.py  exceptions.py  lifespan.py  logging_config.py  main.py  retries.py  settings.py
data/: acme-knowledge.json  sample-tasks.json
docs/: architecture.md  engineering-standards.md
instructor-notes/: checkpoint-1.md  checkpoint-2.md  checkpoint-3.md  checkpoint-4.md
tests/: __init__.py  conftest.py  test_agent_with_fake_llm.py  test_safety.py  test_schemas.py  test_tools.py
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  index.css  storage.ts  types.ts
ui/src/components/: AgentTimeline.tsx  ProposedCallCard.tsx  icons.tsx  ui.tsx
ui/src/views/: AgentRunView.tsx  CompareView.tsx  DashboardView.tsx  HitlView.tsx  RagView.tsx  SafetyView.tsx  TasksView.tsx  ThreadView.tsx  ToolsView.tsx
(+87 files in other folders)
